--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
 spring.application.name=wanted
 
 server.port=7070
+
+
+spring.messages.basename=mensajes
+
+spring.datasource.url=jdbc:h2:mem:figurasdb;DB_CLOSE_DELAY=-1
+
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
