--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,9 @@ spring.application.name=wanted
 server.port=7070
 
 
-spring.messages.basename=mensajes
-
-spring.datasource.url=jdbc:h2:mem:figurasdb;DB_CLOSE_DELAY=-1
-
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://figura-mysql:3306/figuradb
+spring.datasource.username=root
+spring.datasource.password=quevedo
+# spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.h2.console.enabled=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
