--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=wanted
 server.port=7070
 
 
-spring.datasource.url=jdbc:mysql://figura-mysql:3306/figuradb
-spring.datasource.username=root
-spring.datasource.password=quevedo
+#spring.datasource.url=jdbc:mysql://figura-mysql:3306/figuradb
+#spring.datasource.username=root
+#spring.datasource.password=quevedo
 # spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.h2.console.enabled=false
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+# spring.h2.console.enabled=false
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
