--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,19 +2,19 @@ spring.application.name=wanted
 
 server.port=7071
 
-#spring.messages.basename=mensajes
+spring.messages.basename=mensajes
 
-#spring.datasource.url=jdbc:h2:mem:figurasdb;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:figurasdb;DB_CLOSE_DELAY=-1
 
-#spring.datasource.username=sa
-#spring.datasource.password=
+spring.datasource.username=sa
+spring.datasource.password=
 
-#spring.h2.console.enabled=true
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.url=jdbc:mysql://localhost:3308/figuradb
-spring.datasource.username=root
-spring.datasource.password=quevedo
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.h2.console.enabled=true
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url=jdbc:mysql://localhost:3308/figuradb
+#spring.datasource.username=root
+#spring.datasource.password=quevedo
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=update
