--- a/pom.xml
+++ b/pom.xml
@@ -53,14 +53,21 @@
             <artifactId>spring-security-data</artifactId>
         </dependency>
 
-<!--        luego borrar esta dependecia -->
-       <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+        <!--        luego borrar esta dependecia -->
+               <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                    <scope>runtime</scope>
+                </dependency>
+
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>20.39.0</version>
         </dependency>
 
-<!--        <dependency>-->
+
+        <!--        <dependency>-->
 <!--            <groupId>mysql</groupId>-->
 <!--            <artifactId>mysql-connector-java</artifactId>-->
 <!--            <version>8.0.29</version>-->
