--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,11 @@
         </dependency>
 
         <!--        luego borrar esta dependecia -->
-<!--               <dependency>
-                    <groupId>com.h2database</groupId>
-                    <artifactId>h2</artifactId>
-                    <scope>runtime</scope>
-                </dependency>-->
+<!--              <dependency>-->
+<!--                    <groupId>com.h2database</groupId>-->
+<!--                    <artifactId>h2</artifactId>-->
+<!--                    <scope>runtime</scope>-->
+<!--                </dependency>-->
 
         <dependency>
             <groupId>com.stripe</groupId>
