--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,12 @@ spring.datasource.username=root
 spring.datasource.password=quevedo
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=seraitors@gmail.com
+spring.mail.password=bvpi lqsp uwbv dsus
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
