--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.url=jdbc:mysql://localhost:3308/figuradb
 spring.datasource.username=root
 spring.datasource.password=quevedo
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 
 spring.mail.host=smtp.gmail.com
