--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,13 @@ spring.datasource.url=jdbc:mysql://localhost:3308/figuradb
 spring.datasource.username=root
 spring.datasource.password=quevedo
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 
+spring.datasource.hikari.maximumPoolSize=10
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.idleTimeout=600000
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
