--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,11 @@
         </dependency>
 
         <!--        luego borrar esta dependecia -->
-<!--              <dependency>-->
-<!--                    <groupId>com.h2database</groupId>-->
-<!--                    <artifactId>h2</artifactId>-->
-<!--                    <scope>runtime</scope>-->
-<!--                </dependency>-->
+              <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                    <scope>runtime</scope>
+                </dependency>
 
         <dependency>
             <groupId>com.stripe</groupId>
@@ -68,7 +68,7 @@
         </dependency>
 
 
-                <dependency>
+<!--                <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.29</version>
@@ -78,7 +78,7 @@
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>com.sparkjava</groupId>
